--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* Selector de Etiqueta */
 header {
-    background: blueviolet;
-    color: brown
+
 }
 
 /* Selector descendente */
@@ -20,4 +19,12 @@ body header div nav ol li a {
 
 .link {
 
+}
+
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Fjalla One', sans-serif;
 }
