--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body header div nav ol li a {
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
+    margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -55,10 +56,17 @@ h1 strong {
     background-position-x: right;
 }
 
+.portfolio {
+    background-color: #fafafa;
+}
+
 .project {
     border: 1px solid gray;
     border-radius: 10px;
+    margin: 10px;
     margin-bottom: 15px;
+    padding: 20px;
+    background-color: #ffffff;
 }
 
 .project-details {
