--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,46 @@ h1 strong {
 .header {
     background-color: #1b2127;
     color: #ffffff;
+    display: flex;
+    height: 90px;
+    /* align-items: center;*/
+    justify-content: space-between;
+}
+
+ol,
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+figure {
+    margin: 0;
 }
 
 .header a {
     color: #ffffff;
     text-decoration: none;
+}
+
+.menu {
+    height: inherit;
+}
+
+.header ol {
+    display: flex;
+    height: inherit;
+}
+
+.header ol li {
+    height: inherit;
+    display: flex;
+    align-items: center;
+}
+
+.header a {
+    display: flex;
+    align-items: center;
+    height: inherit;
+    padding: 0 10px;
 }
