--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,15 @@ h1 strong {
     color: #026fff;
 }
 
+h2 {
+    color: #026fff;
+    text-transform: uppercase;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 40px;
+}
+
 .hero {
     height: 300px;
     /* background-color: red; */
@@ -54,19 +63,51 @@ h1 strong {
     background-size: 500px 300px;
     background-repeat: no-repeat;
     background-position-x: right;
+    display: flex;
+    align-items: center;
 }
 
 .portfolio {
     background-color: #fafafa;
+    padding: 20px;
 }
 
 .project {
     border: 1px solid gray;
     border-radius: 10px;
-    margin: 10px;
+   /* margin: 10px;*/
     margin-bottom: 15px;
     padding: 20px;
     background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.project-course {
+    margin: 10px 0;
+}
+
+.project-date {
+    margin: 10px 0;
+}
+
+.project-url {
+    margin: 10px 0;
+}
+
+.project-description {
+    font-size: 20px;
+}
+
+.project strong {
+    font-family: 'Fjalla One', sans-serif;
+}
+
+.project-title {
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .project-details {
@@ -82,8 +123,8 @@ h1 strong {
     background-color: #1b2127;
     color: #ffffff;
     display: flex;
-    height: 90px;
-    /* align-items: center;*/
+    height: 70px;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -123,4 +164,126 @@ figure {
     align-items: center;
     height: inherit;
     padding: 0 10px;
+}
+
+.footer {
+    background-color: #1b2127;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer img {
+    vertical-align: middle;
+}
+
+.footer a {
+    color: #ffffff;
+}
+
+.event-list {
+    display: flex;
+}
+
+.event-list-title {
+    margin-left: 20px;
+}
+
+.event {
+    margin: 10px;
+    width: 480px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #f4fbff;
+}
+
+.event img {
+    width: 480px;
+    height: 200px;
+    object-fit: cover;
+}
+.event-details {
+    margin: 20px 40px;;
+    margin-top: -40px;
+    background-color: #ffffff;
+    position: relative;
+    padding: 20px;
+    text-align: center;
+}
+
+.event-description {
+    text-align: left;
+}
+
+.event-url {
+    color: #026fff;
+    border: 1px solid #056fff; 
+    padding: 5px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.contact {
+    background-color: #056fff;
+    color: #ffffff;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.social {
+}
+
+.social-link {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-size: 50px 50px;
+    margin: 0 10px;
+}
+
+.social-link.twiter {
+    background-image: url('../images/twitter.svg');
+}
+
+.social-link.facebook {
+    background-image: url('../images/facebook.svg');
+}
+
+.social-link.github {
+    background-image: url('../images/github.svg');
+}
+
+.social-link.instagram {
+    background-image: url('../images/instagram.svg');
+}
+
+.form-email input {
+    border-color: gray;
+    border-radius: 5px;
+    border-style: solid;
+    padding: 10px 20px 10px 25px;
+    background-image: url('../images/envelope.svg');
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: 5px;
+}
+
+.form-email button {
+    display: block;
+    background-color: transparent;
+    color: white;
+    padding: 10px 0;
+    border-radius: 5px; 
+    width: 100px;
+    margin-top: 10px;
+    border-style: solid;
+}
+
+.form-email h3 {
+    font-family: 'Source Sans Pro', sans-serif;
 }
