--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,18 @@ h2 {
 .hero {
     height: 300px;
     /* background-color: red; */
-    background-image: url(../images/hero.jpg);
+    /* background-image: url(../images/hero.jpg); */
     background-color: #1b2127;
-    background-size: 500px 300px;
+    /*background-size: 500px 300px;
     background-repeat: no-repeat;
-    background-position-x: right;
+    background-position-x: right; */
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.hero-image {
+    object-fit: cover;
 }
 
 .portfolio {
@@ -184,6 +189,7 @@ figure {
 
 .event-list {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .event-list-title {
@@ -228,7 +234,7 @@ figure {
 .contact {
     background-color: #056fff;
     color: #ffffff;
-    height: 150px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -286,4 +292,14 @@ figure {
 
 .form-email h3 {
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+.container {
+    width: 1000px;
+    margin: 0 auto;
+    display: inherit;
+    justify-content: inherit;
+    align-items: inherit;
+    height: inherit;
+    flex-wrap: inherit;
 }
